[package]
name = "csv-to-md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
leptos = { version = "0.5", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"
leptos_meta = { version = "0.5", features = ["csr", "nightly"] }
leptos_router = { version = "0.5", features = ["csr", "nightly"] }
