[package]
name = "csv-to-md"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
leptos = { version = "0.5", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"
leptos_meta = { version = "0.5", features = ["csr", "nightly"] }
csv = "1.3.0"
handlebars = "5.1.1"
leptos-use = "0.9.0"
serde_json = "1.0.113"
